--- a/the-basic-idea.tex
+++ b/the-basic-idea.tex
@@ -9,27 +9,27 @@ In Chapter \ref{ch:typology}, I introduced two descriptive parameters that descr
   \begin{tabular}[b]{c}
     \toprule
     \begin{tikzpicture}[node distance=1.5cm]
-      \node (question2) [question]
-      {allow \tsc{int}};
+	\node (question2) [question, below of=question1, xshift=2.5cm, yshift=-1cm]
+      {\small{allow \tsc{int}}}; %ϕ+\tsc{k} portmanteau?
           \node (outcome2) [outcome, below of=question2, xshift=-2cm, yshift=-0.5cm]
-          {matching};
+          {\small{matching}};
               \node (example2) [example, below of=outcome2, yshift=0.5cm]
-              {e.g. Polish\\\phantom{x}\\\phantom{x}};
+              {\small{e.g. Polish (9)\\\phantom{x}\\\phantom{x}}};
           \node (question3) [question, below of=question2, xshift=2.5cm, yshift=-1cm]
-          {allow \tsc{ext}};
+          {\small{allow \tsc{ext}}}; %\tsc{lh}-\ac{rp} syncretism?
               \node (outcome3) [outcome, below of=question3, xshift=-2cm, yshift=-0.5cm]
-              {internal-only};
+              {\small{internal-only}};
                   \node (example3) [example, below of=outcome3, yshift=0.5cm]
-                  {e.g. Modern German\\\phantom{x}};
+                  {\small{e.g. Modern German (3)\\\phantom{x}}};
               \node (outcome4) [outcome, below of=question3, xshift=2cm, yshift=-0.5cm]
-              {unrestricted};
+              {\small{unrestricted}};
                   \node (example4) [example, below of=outcome4, yshift=0.5cm]
-                  {e.g. Gothic, Old High German, Classical Greek};
+                  {\small{e.g. Gothic, Old High German, Classical Greek (2)}};
 
-    \draw [arrow] (question2) -- node[anchor=east] {no} (outcome2);
-    \draw [arrow] (question2) -- node[anchor=west] {yes} (question3);
-    \draw [arrow] (question3) -- node[anchor=east] {no} (outcome3);
-    \draw [arrow] (question3) -- node[anchor=west] {yes} (outcome4);
+    \draw [arrow] (question2) -- node[anchor=east] {\small{no}} (outcome2);
+    \draw [arrow] (question2) -- node[anchor=west] {\small{yes}} (question3);
+    \draw [arrow] (question3) -- node[anchor=east] {\small{no}} (outcome3);
+    \draw [arrow] (question3) -- node[anchor=west] {\small{yes}} (outcome4);
     \end{tikzpicture}\\
     \bottomrule
   \end{tabular}
@@ -939,8 +939,9 @@ not: `those white houses and these white houses'\label{ex:kipsigis-houses} \flus
 
 The order of the noun, the demonstrative and the adjective indicates that the NP must have moved (probably cyclically via YP) to the specifier of WP. I show this in \ref{ex:np-dem-adj-kipsigis}.
 
-\begin{adjustbox}{max width=\textwidth}
+
 \ex.\label{ex:np-dem-adj-kipsigis}
+\begin{adjustbox}{max width=0.85\textwidth}
 \begin{forest} boom
   [WP
       [NP
@@ -974,6 +975,7 @@ In Figure \ref{fig:kipsigis-houses}, I schematically show the first and second c
 
 \begin{figure}[H]
   \center
+	\begin{adjustbox}{max width=\textwidth}
   \begin{tabular}[b]{ccc}
       \toprule
       first conjunct & & second conjunct \\
@@ -1031,6 +1033,7 @@ In Figure \ref{fig:kipsigis-houses}, I schematically show the first and second c
       \end{forest}\\
       \bottomrule
   \end{tabular}
+  \end{adjustbox}
    \caption {Nominal ellipsis in Kipsigis}
    \label{fig:kipsigis-houses}
 \end{figure}
@@ -1725,27 +1728,27 @@ The source of variation between languages is the different lexical entries that 
   \begin{tabular}[b]{c}
     \toprule
     \begin{tikzpicture}[node distance=1.5cm]
-      \node (question2) [question]
-      {ϕ+\tsc{k} portmanteau};
+	\node (question2) [question, below of=question1, xshift=2.5cm, yshift=-1cm]
+      {\small{ϕ+\tsc{k} portmanteau}};
           \node (outcome2) [outcome, below of=question2, xshift=-2cm, yshift=-0.5cm]
-          {matching};
+          {\small{matching}};
               \node (example2) [example, below of=outcome2, yshift=0.5cm]
-              {e.g. Polish\\\phantom{x}\\\phantom{x}};
+              {\small{e.g. Polish (9)\\\phantom{x}\\\phantom{x}}};
           \node (question3) [question, below of=question2, xshift=2.5cm, yshift=-1cm]
-          {\tsc{lh}-\tsc{rp} syncretism};
+          {\small{\tsc{lh}-\tsc{rp} syncretism}};
               \node (outcome3) [outcome, below of=question3, xshift=-2cm, yshift=-0.5cm]
-              {internal-only};
+              {\small{internal-only}};
                   \node (example3) [example, below of=outcome3, yshift=0.5cm]
-                  {e.g. Modern German\\\phantom{x}};
+                  {\small{e.g. Modern German (3)\\\phantom{x}}};
               \node (outcome4) [outcome, below of=question3, xshift=2cm, yshift=-0.5cm]
-              {unrestricted};
+              {\small{unrestricted}};
                   \node (example4) [example, below of=outcome4, yshift=0.5cm]
-                  {e.g. Gothic, Old High German, Classical Greek};
+                  {\small{e.g. Gothic, Old High German, Classical Greek (2)}};
 
-    \draw [arrow] (question2) -- node[anchor=east] {no} (outcome2);
-    \draw [arrow] (question2) -- node[anchor=west] {yes} (question3);
-    \draw [arrow] (question3) -- node[anchor=east] {no} (outcome3);
-    \draw [arrow] (question3) -- node[anchor=west] {yes} (outcome4);
+    \draw [arrow] (question2) -- node[anchor=east] {\small{no}} (outcome2);
+    \draw [arrow] (question2) -- node[anchor=west] {\small{yes}} (question3);
+    \draw [arrow] (question3) -- node[anchor=east] {\small{no}} (outcome3);
+    \draw [arrow] (question3) -- node[anchor=west] {\small{yes}} (outcome4);    
     \end{tikzpicture}\\
     \bottomrule
   \end{tabular}
