--- a/fenna-files/references.bib
+++ b/fenna-files/references.bib
@@ -153,6 +153,14 @@
   publisher = {Cascadilla Press}
 }
 
+@book{arregi2012,
+  title = {Morphotactics: Basque Auxiliaries and the Structure of Spellout},
+  author = {Arregi, Karlos and Nevins, Andrew},
+  year = {2012},
+  publisher = {Springer},
+  adress = {Dordrecht}
+}
+
 
 @book{einarsson1949,
   title = {Icelandic: grammar, texts, glossary},
@@ -1073,17 +1081,6 @@
   pages={1--32},
   year={2021},
   doi = {10.18148/hs/2021.v5i1-13.32}
-}
-
-@inproceedings{arregi2012,
-  title = {Restructuring in Basque and the theory of agreement},
-  author = {Arregi, Karlos and Molina-Azaola, Gainko},
-  booktitle = {Proceedings of the 23rd West Coast Conference on Formal Linguistics},
-  pages = {43--56},
-  year = {2004},
-  editor = {Vineeta Chand, Ann Kelleher, Angelo J. RodrÃ­guez and Benjamin Schmeiser},
-  location = {Somerville, MA},
-  publisher = {Cascadilla Press}
 }
 
 @incollection{bergsma2023,
