--- a/languages-without-case-competition.tex
+++ b/languages-without-case-competition.tex
@@ -550,37 +550,36 @@ I incorporate the parameter that models this pattern into the diagram from Secti
   \begin{adjustbox}{max width=\textwidth}
   \begin{tabular}[b]{c}
       \toprule
-    \begin{tikzpicture}[node distance=1.5cm]
+		    \begin{tikzpicture}[node distance=1.5cm]
     \node (question1) [question]
-    {cases considered};
+    {\small{cases considered}};
         \node (outcome1) [outcome, below of=question1, xshift=-2cm, yshift=-0.5cm]
-        {always external};
+        {\small{always external}};
             \node (example1) [example, below of=outcome1, yshift=0.5cm]
-            {e.g. Old English, Modern Greek (5)\\\phantom{x}};
+            {\small{e.g. Old English, Modern Greek (5)\\\phantom{x}}};
     \node (question2) [question, below of=question1, xshift=2.5cm, yshift=-1cm]
-      {allow \tsc{int}}; %ϕ+\tsc{k} portmanteau?
+      {\small{allow \tsc{int}}}; %ϕ+\tsc{k} portmanteau?
           \node (outcome2) [outcome, below of=question2, xshift=-2cm, yshift=-0.5cm]
-          {matching};
+          {\small{matching}};
               \node (example2) [example, below of=outcome2, yshift=0.5cm]
-              {e.g. Polish (9)\\\phantom{x}\\\phantom{x}};
+              {\small{e.g. Polish (9)\\\phantom{x}\\\phantom{x}}};
           \node (question3) [question, below of=question2, xshift=2.5cm, yshift=-1cm]
-          {allow \tsc{ext}}; %\tsc{lh}-\ac{rp} syncretism?
+          {\small{allow \tsc{ext}}}; %\tsc{lh}-\ac{rp} syncretism?
               \node (outcome3) [outcome, below of=question3, xshift=-2cm, yshift=-0.5cm]
-              {internal-only};
+              {\small{internal-only}};
                   \node (example3) [example, below of=outcome3, yshift=0.5cm]
-                  {e.g. Modern German (3)\\\phantom{x}};
+                  {\small{e.g. Modern German (3)\\\phantom{x}}};
               \node (outcome4) [outcome, below of=question3, xshift=2cm, yshift=-0.5cm]
-              {unrestricted};
+              {\small{unrestricted}};
                   \node (example4) [example, below of=outcome4, yshift=0.5cm]
-                  {e.g. Gothic, Old High German, Classical Greek (2)};
+                  {\small{e.g. Gothic, Old High German, Classical Greek (2)}};
 
-    \draw [arrow] (question1) -- node[anchor=north] {\ac{int} + \ac{ext}} (question2);
-    \draw [arrow] (question1) -- node[anchor=east] {\ac{ext}} (outcome1);
-    \draw [arrow] (question2) -- node[anchor=east] {no} (outcome2);
-    \draw [arrow] (question2) -- node[anchor=west] {yes} (question3);
-    \draw [arrow] (question3) -- node[anchor=east] {no} (outcome3);
-    \draw [arrow] (question3) -- node[anchor=west] {yes} (outcome4);
-
+    \draw [arrow] (question1) -- node[anchor=north] {\small{\ac{int} + \ac{ext}}} (question2);
+    \draw [arrow] (question1) -- node[anchor=east] {\small{\ac{ext}}} (outcome1);
+    \draw [arrow] (question2) -- node[anchor=east] {\small{no}} (outcome2);
+    \draw [arrow] (question2) -- node[anchor=west] {\small{yes}} (question3);
+    \draw [arrow] (question3) -- node[anchor=east] {\small{no}} (outcome3);
+    \draw [arrow] (question3) -- node[anchor=west] {\small{yes}} (outcome4);
     \end{tikzpicture}\\
     \bottomrule
   \end{tabular}
