--- a/thesis.tex
+++ b/thesis.tex
@@ -16,7 +16,7 @@
 \addtolength{\trimedge}{-\paperwidth}
 \settypeblocksize{634pt}{448.13pt}{*}
 \setulmargins{4cm}{*}{*}
-\setlrmargins{*}{*}{1.5}
+\setlrmargins{*}{*}{0.6666666666666666666666666667}
 \setmarginnotes{17pt}{51pt}{\onelineskip}
 \setheadfoot{\onelineskip}{2\onelineskip}
 \setheaderspaces{*}{2\onelineskip}{*}
@@ -30,6 +30,7 @@
 }
 \makeatother
 
+
 \begin{document}
 
 \bookmarksetup{startatroot}
@@ -37,10 +38,6 @@
 \frontmatter
 
 \begin{titlingpage}
-
-\phantom{xx}
-
-\newpage
 
 \center
 
@@ -97,6 +94,31 @@ Tag der mündlichen Prüfung: 17.12.2021
 
 
 }
+
+\vspace{5em}
+\phantom{x}
+\vspace{5em}
+\phantom{x}
+\vspace{5em}
+\phantom{x}
+\vspace{5em}
+\phantom{x}
+\vspace{5em}
+\phantom{x}
+\vspace{5em}
+\phantom{x}
+\vspace{5em}
+\phantom{x}
+\vspace{5em}
+\phantom{x}
+\vspace{5em}
+\phantom{x}
+\vspace{5em}
+\phantom{x}
+\vspace{5em}
+\phantom{x}
+
+\thispagestyle{empty}
 
 \end{titlingpage}
 
